[package]
name = "TestRequests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
filenamify = "0.1.0"
fstrings = "0.2.3"
lazy_static = "1.4.0"
maplit = "1.0.2"
mslnk = "0.1.8"
regex = "1.10.4"
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
winapi = { version = "0.3.9", features = ["shellapi", "objbase", "shobjidl", "winbase"] }
